--- a/intern-Project/imrWebsite/vercel.json
+++ b/intern-Project/imrWebsite/vercel.json
@@ -1,5 +1,7 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "routes": [
+    { "src": "/(.*)", "dest": "/" },
+    {"src": "/test", "dest": "/"}
+
   ]
 }
