--- a/intern-Project/imrWebsite/vercel.json
+++ b/intern-Project/imrWebsite/vercel.json
@@ -1,7 +1,6 @@
 {
   "routes": [
-    { "src": "/(.*)", "dest": "/" },
-    {"src": "/test", "dest": "/"}
+    { "src": "/(.*)", "dest": "/" }
 
   ]
 }
